# LAB_1

C++LAB_1/: CMakeLists.txt  Class_BrokenLine.cpp  Class_BrokenLine.h  Class_ClosedBrokenLine.cpp  Class_ClosedBrokenLine.h  Class_Point.cpp  Class_Point.h  Class_Polygon.cpp  Class_Polygon.h  Class_RegularPolygon.cpp  Class_RegularPolygon.h  Class_Trapezoid.cpp  Class_Trapezoid.h  Class_Triangle.cpp  Class_Triangle.h  main.cpp
C++LAB_1.2/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  main.cpp
