cmake_minimum_required(VERSION 3.21)
project(C__LAB_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(C__LAB_1 main.cpp Class_Point.h Class_Point.cpp Class_BrokenLine.cpp Class_BrokenLine.h Class_ClosedBrokenLine.cpp Class_ClosedBrokenLine.h Class_Polygon.cpp Class_Polygon.h Class_Triangle.cpp Class_Triangle.h Class_Trapezoid.cpp Class_Trapezoid.h Class_RegularPolygon.cpp Class_RegularPolygon.h)
